--- a/Product-manager/css/estilos.css
+++ b/Product-manager/css/estilos.css
@@ -102,7 +102,8 @@ html {
     max-width: 900px;
     /* height: auto; */
     margin: 0 auto 10px;
-    background-color: white;   
+    background-color: white; 
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);  
 }
 h3{
     text-align: center;
