--- a/Project-manager/css/estilos.css
+++ b/Project-manager/css/estilos.css
@@ -116,6 +116,7 @@ html {
     /* height: 300px; */
     margin: 0 auto 10px;
     background-color: white;
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);
     
 }
 .experience-container h3{
