--- a/Usability/css/estilos.css
+++ b/Usability/css/estilos.css
@@ -103,7 +103,8 @@ html {
     max-width: 1000px;
     /* height: 300px; */
     margin: 0 auto 10px;
-    background-color: white;    
+    background-color: white;   
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60); 
 }
 .experience-container h3{
     text-align: center;
