--- a/Web-development/css/estilos.css
+++ b/Web-development/css/estilos.css
@@ -103,7 +103,8 @@ html {
     max-width: 900px;
     /* height: 300px; */
     margin: 0 auto 10px;
-    background-color: white;   
+    background-color: white;
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);   
 }
 .experince-sentence{
     /* max-width: 850px; */
