--- a/css/estilos.css
+++ b/css/estilos.css
@@ -186,6 +186,7 @@ body{
     color: #FFFFFE;
     /* line-height: 80px;
     text-align: center; */
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);
 }
 .lovetodo-pink{
     border: 1px solid #FFC0C2;
@@ -200,6 +201,7 @@ body{
     color: #FFFFFE;
     /* line-height: 80px;
     text-align: center; */
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);
 }
 .experience-list{   
     background-color: #6DC9C8;
@@ -211,7 +213,7 @@ body{
 }
 .experience-list-title h2{
     margin: 0;
-    padding: 10px 0 0;
+    padding: 10px 0;
 }
 
 .experience-container{
@@ -232,6 +234,7 @@ body{
     padding: 20px;
     text-align: center;
     border-radius: 8px;
+    box-shadow: 1px 2px 14px 1px rgba(0, 0, 0, 0.68);
     
 }
 /* .experience-imageContainer{
@@ -280,7 +283,8 @@ body{
     border-radius: 5px;
     width: 100px;
     text-transform: uppercase;
-    margin: 0 auto;       
+    margin: 0 auto;  
+    box-shadow: 1px 2px 10px -1px rgba(0, 0, 0, 0.60);     
 }
 .experience-button a{
     text-decoration: none;
